About us page overlapping issue fixed

--- a/src/app/client/about/about.component.scss
+++ b/src/app/client/about/about.component.scss
@@ -35,12 +35,10 @@
 }
 
 .flex-container1 {
-  height: 100px;
   flex-basis: 70%;
 }
 
 .flex-container2 {
-  height: 100px;
   flex-basis: 30%;
 }
 
